# Idea-Workbench

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/archive/: README_CN.legacy.md  TOOL_IMPLEMENTATION_REPORT_CN.legacy.md  WORKFLOW_GUIDE_CN.legacy.md
examples/: seed_embodied_world_model.md
idea_workbench/: __init__.py  cli.py  evidence.py  heuristics.py  ingest.py  literature_store.py  llm_workflow.py  models.py  pdfs.py  project.py  render.py  schemas.py  search.py  tracing.py
prompts/: adversarial_reviewer.md  bottleneck_extractor.md  branch_screener.md  brief_extractor.md  claim_decomposer.md  decision_chair.md  experiment_planner.md  idea_branch_generator.md  idea_refiner.md  idea_strengthener.md  mechanism_transfer_mapper.md  novelty_matrix_builder.md  paper_triage.md  query_planner.md  research_builder.md  research_chair.md  research_critic_panel.md  research_opportunity_miner.md  research_quality_bar.md  research_reviser.md
tests/: test_cli_smoke.py  test_evidence_qa.py  test_ingest.py  test_literature_store.py  test_llm_workflow.py  test_pdfs.py  test_search_backend.py
